# landing

./: CMPSC600_Demo_Lander.ipynb  README.md  pyproject.toml  skills_cluster.ipynb  skills_cluster_kmean.ipynb  skills_cluster_ver2.ipynb  streamlit_setup.py
data/: jobtitle.txt
lander/: file_handling.py  jd_handling.py  skill_extracting.py  text_mining.py
resume_util/: file_handling.py  jd_handling.py  main.py  pyproject.toml  skill_clustering.py  text_mining.py
resume_util/resume_util/: file_handling.py  jd_handling.py  main.py  text_mining.py  web_scrape.py
tests/: test_filehandling.py
