[tool.poetry]
name = "resume-util"
version = "0.1.0"
description = ""
authors = ["Mai1902 <nguyendacm@allegheny.edu>"]
readme = "README.md"
packages = [{include = "resume_util"}]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
pandas = "^1.5.0"
PyPDF2 = "^2.11.0"
spacy = "^3.4.1"
sklearn = "^0.0"
gensim = "^4.2.0"
resume-parser = "^0.8.4"


[tool.poetry.dev-dependencies]
requests = "^2.28.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
